finished exercise 2 in lesson 1 about logical markup tags; fixed remarks from w3c validator about code of exercise 1

--- a/Homework/Homework/Starter/Lesson 1/Exercise 1. Physical Markup tags/PhysicalMarkupTags.html
+++ b/Homework/Homework/Starter/Lesson 1/Exercise 1. Physical Markup tags/PhysicalMarkupTags.html
@@ -1,23 +1,23 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8" />
     <title>Теги физической разметки</title>
 </head>
 <body>
     <h1>Теги физической разметки</h1>
-    <p>Тег &ltb&gt придает тексту <b>жирное начертание</b>.</p>
-    <p dir="rtl"><bdi> زيارة رئيس روسيا إلى </bdi> Тег &ltbdi&gt очень удобен при работе с арабским </p>
-    <p>Тег &ltbdo&gt позволяет писать текст задом наперед <bdo dir="rtl">А роза упала на лапу Азора</bdo>.</p>
-    <p>Тег &lti&gt придает тексту <i>курсивное начертание</i>.</p>
-    <p>Тег &lts&gt отображает текст <s>перечеркнутым</s>.</p>
-    <p>Тег &ltsmall&gt делает текст <small>чуточку меньше</small>.</p>
-    <p>Тег &ltbig&gt делает текст <big>чуточку больше</big>.</p>
-    <p>Тег &ltsup&gt позволяет описать степень 2<sup>x</sup>.</p>
-    <p>Тег &ltsub&gt позволяет описать индекс x<sub>0</sub>+x<sub>1</sub>.</p>
-    <p>Тег &ltmeter&gt очень даже интересный счетчик.</p>
+    <p>Тег &lt;b&gt; придает тексту <b>жирное начертание</b>.</p>
+    <p dir="rtl"><bdi> زيارة رئيس روسيا إلى </bdi> Тег &lt;bdi&gt; очень удобен при работе с арабским </p>
+    <p>Тег &lt;bdo&gt; позволяет писать текст задом наперед <bdo dir="rtl">А роза упала на лапу Азора</bdo>.</p>
+    <p>Тег &lt;i&gt; придает тексту <i>курсивное начертание</i>.</p>
+    <p>Тег &lt;s&gt; отображает текст <s>перечеркнутым</s>.</p>
+    <p>Тег &lt;small&gt; делает текст <small>чуточку меньше</small>.</p>
+    <p>Тег &lt;big&gt; делает текст <big>чуточку больше</big>.</p>
+    <p>Тег &lt;sup&gt; позволяет описать степень 2<sup>x</sup>.</p>
+    <p>Тег &lt;sub&gt; позволяет описать индекс x<sub>0</sub>+x<sub>1</sub>.</p>
+    <p>Тег &lt;meter&gt; очень даже интересный счетчик.</p>
     <meter value="70" min="0" max="100" low="20" high="60"></meter>
-    <p>Тег &ltprogress&gt позволяет оценить степень завершенности какого-либо действия.</p>
+    <p>Тег &lt;progress&gt; позволяет оценить степень завершенности какого-либо действия.</p>
     <progress value="30" max="100"></progress>
 </body>
 </html>
